--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         text-align: center;
       }
     </style>
-    <script defer src="app.js"></script>
+    <script defer src="app-r.js"></script>
   </head>
   <body>
     <h1 class="title">Counter</h1>
